--- a/requirements.txt
+++ b/requirements.txt
@@ -1,300 +1,296 @@
-﻿absl-py==2.0.0
-aiohttp==3.8.5
-aiosignal==1.3.1
-altair==4.0.0
-annotated-types==0.5.0
-anyio==3.7.1
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asn1crypto==1.5.1
-astor==0.8.1
-asttokens==2.2.1
-astunparse==1.6.3
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.6.2
-cachetools==5.3.1
-calmap==0.0.11
-calplot==0.1.7.5
-catplot==1.3.3
-certifi==2023.7.22
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.2.0
-click==8.1.7
-cmdstanpy==1.1.0
-coincurve==18.0.0
-colorama==0.4.6
-comm==0.1.4
-comtypes==1.2.0
-contourpy==1.1.0
-convertdate==2.4.0
-cryptography==41.0.3
-cycler==0.11.0
-dacite==1.8.1
-datasketch==1.6.1
-datasketches==4.1.0
-debugpy==1.6.7.post1
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-docopt==0.6.2
-duckdb==0.8.1
-entrypoints==0.4
-ephem==4.1.4
-exceptiongroup==1.1.3
-executing==1.2.0
-extra-streamlit-components==0.1.56
-Faker==19.3.1
-fastjsonschema==2.18.0
-favicon==0.7.0
-firebase==4.0.1
-Flask==2.3.3
-flatbuffers==23.5.26
-fonttools==4.42.1
-fqdn==1.5.1
-frozenlist==1.4.0
-gast==0.4.0
-gcloud==0.18.3
-gitdb==4.0.10
-GitPython==3.1.32
-google-api-core==2.11.1
-google-api-python-client==2.97.0
-google-auth==2.22.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.60.0
-googletrans==3.0.0
-grpcio==1.58.0
-gspread==5.10.0
-gspread-dataframe==3.3.1
-gspread-formatting==1.1.2
-gspread-pandas==3.2.3
-h11==0.9.0
-h2==3.2.0
-h5py==3.9.0
-holidays==0.31
-hpack==3.0.0
-hstspreload==2023.1.1
-htbuilder==0.6.1
-htmlmin==0.1.12
-httpcore==0.9.1
-httplib2==0.22.0
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
-ImageHash==4.3.1
-importlib-metadata==6.8.0
-importlib-resources==6.0.1
-ipykernel==6.25.1
-ipytablewidgets==0.3.1
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.1.1
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-jwcrypto==1.5.0
-keras==2.13.1
-kiwisolver==1.4.5
-lambdaprompt==0.5.5
-libclang==16.0.6
-LunarCalendar==0.0.9
-lxml==4.9.3
-lz4==4.3.2
-Markdown==3.4.4
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-missingno==0.5.2
-mistune==3.0.1
-more-itertools==10.1.0
-multidict==6.0.4
-multimethod==1.10
-nbclient==0.8.0
-nbconvert==7.8.0
-nbformat==5.9.2
-nest-asyncio==1.5.7
-networkx==3.1
-nltk==3.8.1
-notebook==7.0.3
-notebook_shim==0.2.3
-numpy==1.23.5
-oauth2client==4.1.3
-oauthlib==3.2.2
-openai==0.27.10
-opencv-python==4.8.0.76
-opt-einsum==3.3.0
-outcome==1.2.0
-overrides==7.4.0
-packaging==23.1
-pandas==1.5.3
-pandas-profiling==3.2.0
-pandasai==1.1.2
-pandasgui==0.2.14
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-phik==0.12.3
-pickleshare==0.7.5
-Pillow==9.5.0
-pipreqs==0.4.13
-platformdirs==3.10.0
-plotly==5.16.1
-plotly-calplot==0.1.16
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-prophet==1.1.4
-protobuf==4.24.1
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-PyAudio==0.2.13
-pycparser==2.21
-pycryptodome==3.18.0
-pydantic==1.10.12
-pydantic_core==2.6.3
-pydeck==0.8.0
-PyDrive==1.3.1
-Pygments==2.16.1
-pygwalker==0.3.5
-PyJWT==2.8.0
-pymdown-extensions==10.1
-PyMeeus==0.5.12
-Pympler==1.0.1
-pynput==1.7.6
-pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-Pyrebase4==4.7.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-jwt==4.0.0
-pyttsx3==2.90
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-PyYAML==6.0.1
-pyzmq==25.1.1
-qtconsole==5.4.3
-QtPy==2.4.0
-qtstylish==0.1.5
-referencing==0.30.2
-regex==2023.8.8
-requests==2.29.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.5.2
-rpds-py==0.9.2
-rsa==4.9
-scipy==1.11.2
-seaborn==0.12.2
-selenium==4.11.2
-Send2Trash==1.8.2
-six==1.16.0
-sketch==0.4.2
-smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-SpeechRecognition==3.10.0
-sql-metadata==2.8.0
-sqlglot==18.3.0
-sqlparse==0.4.4
-st-annotated-text==4.0.0
-st-circular-progress==0.3.9
-stack-data==0.6.2
-statsmodels==0.14.0
-streamlit==1.26.0
-streamlit-antd-components==0.2.1
-streamlit-authenticator==0.2.2
-streamlit-camera-input-live==0.2.0
-streamlit-card==0.0.61
-streamlit-embedcode==0.1.2
-streamlit-extras==0.3.0
-streamlit-faker==0.0.2
-streamlit-image-coordinates==0.1.6
-streamlit-keyup==0.2.0
-streamlit-lottie==0.0.5
-streamlit-option-menu==0.3.6
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==1.0.2
-tabulate==0.9.0
-tangled-up-in-unicode==0.2.0
-tenacity==8.2.3
-termcolor==2.3.0
-terminado==0.17.1
-tinycss2==1.2.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.9.0
-traittypes==0.2.1
-trio==0.22.2
-trio-websocket==0.10.3
-typeguard==2.13.3
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==4.3.1
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.16
-validators==0.21.2
-vega==4.0.0
-visions==0.7.5
-watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webdriver-manager==4.0.0
-webencodings==0.5.1
-websocket-client==1.6.2
-Werkzeug==2.3.7
-widgetsnbextension==4.0.8
-wordcloud==1.9.2
-wrapt==1.15.0
-wsproto==1.2.0
-yarg==0.1.9
-yarl==1.9.2
-ydata-profiling==4.5.1
-zipp==3.16.2
+absl-py
+aiohttp
+aiosignal
+altair
+annotated-types
+anyio
+appdirs
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asn1crypto
+astor
+asttokens
+astunparse
+async-lru
+async-timeout
+attrs
+Babel
+backcall
+bcrypt
+beautifulsoup4
+bleach
+blinker
+cachetools
+calmap
+calplot
+catplot
+certifi
+cffi
+chardet
+charset-normalizer
+click
+cmdstanpy
+coincurve
+colorama
+comm
+comtypes
+contourpy
+convertdate
+cryptography
+cycler
+dacite
+datasketch
+datasketches
+debugpy
+decorator
+defusedxml
+Deprecated
+docopt
+duckdb
+entrypoints
+ephem
+exceptiongroup
+executing
+extra-streamlit-components
+Faker
+fastjsonschema
+favicon
+firebase
+Flask
+flatbuffers
+fonttools
+fqdn
+frozenlist
+gast
+gcloud
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+google-pasta
+googleapis-common-protos
+googletrans
+grpcio
+gspread
+gspread-dataframe
+gspread-formatting
+gspread-pandas
+h11
+h2
+h5py
+holidays
+hpack
+hstspreload
+htbuilder
+htmlmin
+httpcore
+httplib2
+httpx
+hyperframe
+idna
+ImageHash
+importlib-metadata
+importlib-resources
+ipykernel
+ipytablewidgets
+ipython
+ipython-genutils
+ipywidgets
+isoduration
+itsdangerous
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter
+jupyter-console
+jupyter-events
+jupyter-lsp
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab-pygments
+jupyterlab-widgets
+jupyterlab_server
+jwcrypto
+keras
+kiwisolver
+lambdaprompt
+libclang
+LunarCalendar
+lxml
+lz4
+Markdown
+markdown-it-py
+markdownlit
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+missingno
+mistune
+more-itertools
+multidict
+multimethod
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+networkx
+nltk
+notebook
+notebook_shim
+numpy
+oauth2client
+oauthlib
+openai
+opencv-python
+opt-einsum
+outcome
+overrides
+packaging
+pandas
+pandocfilters
+parso
+patsy
+phik
+pickleshare
+Pillow
+pipreqs
+platformdirs
+plotly
+plotly-calplot
+prometheus-client
+prompt-toolkit
+prophet
+protobuf
+psutil
+pure-eval
+pyarrow
+pyasn1
+pyasn1-modules
+PyAudio
+pycparser
+pycryptodome
+pydantic
+pydantic_core
+pydeck
+PyDrive
+Pygments
+pygwalker
+PyJWT
+pymdown-extensions
+PyMeeus
+Pympler
+pynput
+pyparsing
+PyQt5
+PyQt5-Qt5
+PyQt5-sip
+PyQtWebEngine
+PyQtWebEngine-Qt5
+Pyrebase4
+PySocks
+python-dateutil
+python-dotenv
+python-json-logger
+python-jwt
+pyttsx3
+pytz
+pytz-deprecation-shim
+PyWavelets
+PyYAML
+pyzmq
+qtconsole
+QtPy
+qtstylish
+referencing
+regex
+requests
+requests-oauthlib
+requests-toolbelt
+rfc3339-validator
+rfc3986
+rfc3986-validator
+rich
+rpds-py
+rsa
+scipy
+seaborn
+selenium
+Send2Trash
+six
+sketch
+smmap
+sniffio
+sortedcontainers
+soupsieve
+SpeechRecognition
+sql-metadata
+sqlglot
+sqlparse
+st-annotated-text
+st-circular-progress
+stack-data
+statsmodels
+streamlit
+streamlit-antd-components
+streamlit-authenticator
+streamlit-camera-input-live
+streamlit-card
+streamlit-embedcode
+streamlit-extras
+streamlit-faker
+streamlit-image-coordinates
+streamlit-keyup
+streamlit-lottie
+streamlit-option-menu
+streamlit-toggle-switch
+streamlit-vertical-slider
+tabulate
+tangled-up-in-unicode
+tenacity
+termcolor
+terminado
+tinycss2
+toml
+toolz
+tornado
+tqdm
+traitlets
+traittypes
+trio
+trio-websocket
+typeguard
+typing_extensions
+tzdata
+tzlocal
+uri-template
+uritemplate
+urllib3
+validators
+vega
+visions
+watchdog
+wcwidth
+webcolors
+webdriver-manager
+webencodings
+websocket-client
+Werkzeug
+widgetsnbextension
+wordcloud
+wrapt
+wsproto
+yarg
+yarl
+zipp
