--- a/requirements.txt
+++ b/requirements.txt
@@ -216,7 +216,7 @@ referencing
 regex
 requests
 requests-oauthlib
-requests-toolbelt
+requests-toolbelt==0.10.1
 rfc3339-validator
 rfc3986
 rfc3986-validator
