--- a/requirements.txt
+++ b/requirements.txt
@@ -215,9 +215,9 @@ QtPy
 qtstylish
 referencing
 regex
-requests==2.11.1
+requests
 requests-oauthlib
-requests-toolbelt==0.7.0
+requests-toolbelt==0.10.1
 rfc3339-validator
 rfc3986
 rfc3986-validator
