--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ anyio
 appdirs
 argon2-cffi
 argon2-cffi-bindings
+appengine-python-standard
 seleniumbase
 arrow
 asn1crypto
@@ -215,7 +216,7 @@ QtPy
 qtstylish
 referencing
 regex
-requests==2.29.0
+requests
 requests-oauthlib
 requests-toolbelt==1.0.0
 rfc3339-validator
